--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
 </head>
 
 <body>
@@ -23,31 +24,33 @@
         <div class="row">
             <div class="col-md-4" id="playerAreaOne">
                 <h2 id="playerOne"></h2>
-                <form>
-                    <select name="choice">
+                <form id="choicesOne">
+                    <select name="choice" id="choiceOne">
                         <option value="rock">rock</option>
                         <option value="paper">paper</option>
                         <option value="scissors">scissors</option>
                     </select>
-                    <input type="submit" value="Submit">
+                    <input type="submit" id="playerOneChoice" value="Submit">
                 </form>
-                <button type="button" class="leaveButton" id="leaveOne">Leave Game</button>
+                <h2 id="battleChoiceOne"></h2>
+                <!-- <button type="button" class="leaveButton" id="leaveOne">Leave Game</button> -->
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" id="resultsArea">
                 <div id="results"></div>
                 <div id="resultsImage"></div>
             </div>
             <div class="col-md-4" id="playerAreaTwo">
                 <h2 id="playerTwo"></h2>
-                <form>
-                    <select name="choiceTwo">
+                <form id="choicesTwo">
+                    <select name="choice" id="choiceTwo">
                         <option value="rock">rock</option>
                         <option value="paper">paper</option>
                         <option value="scissors">scissors</option>
                     </select>
-                    <input type="submit" value="Submit">
+                    <input type="submit" id="playerTwoChoice" value="Submit">
                 </form>
-                <button type="button" class="leaveButton" id="leaveTwo">Leave Game</button>
+                <h2 id="battleChoiceTwo"></h2>
+                <!-- <button type="button" class="leaveButton" id="leaveTwo">Leave Game</button> -->
             </div>
         </div>
         <div class="row">
@@ -57,15 +60,20 @@
             </div>
         </div>
         <div class="row">
-            <form>
+            <form id="messageAreaOne">
                 RPS messenger:
-                <input type="text" id="message" size="50">
-                <input type="submit" id="messageSubmit" value="Submit">
+                <input type="text" id="messageOne" size="50">
+                <input type="submit" id="messageSubmitOne" value="Submit">
+            </form>
+            <form id="messageAreaTwo">
+                RPS messenger:
+                <input type="text" id="messageTwo" size="50">
+                <input type="submit" id="messageSubmitTwo" value="Submit">
             </form>
         </div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
