--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </p>
                 <p>losses:<p id="losses"></p>
                 </p>
-                <!-- <button type="button" class="leaveButton" id="leaveOne">Leave Game</button> -->
+                <button type="button" class="leaveButton" id="leaveOne">Leave Game</button>
             </div>
             <div class="col-md-4" id="resultsArea">
                 <div id="results"></div>
@@ -67,7 +67,7 @@
                 </p>
                 <p>losses:<p id="lossesTwo"></p>
                 </p>
-                <!-- <button type="button" class="leaveButton" id="leaveTwo">Leave Game</button> -->
+                <button type="button" class="leaveButton" id="leaveTwo">Leave Game</button>
             </div>
         </div>
         <div class="row">
